Fortran-glpk/src/glpk.f90


            function glp_term_out(flag) bind(C,name="glp_term_out")
                use iso_c_binding
                    integer(c_int), value :: flag
                    integer(c_int) :: glp_term_out
            end function
            function glp_open_tee(name) bind(C,name="glp_open_tee")
                use iso_c_binding
                    character(c_char) :: name(*)
                    integer(c_int) :: glp_open_tee
            end function
            function glp_close_tee() bind(C,name="glp_close_tee")
                use iso_c_binding
                    integer(c_int) :: glp_close_tee
            end function
            subroutine glp_alloc(n,size) bind(C,name="glp_alloc")
                use iso_c_binding
                    integer(c_int), value :: n
                    integer(c_int), value :: size
            end subroutine
            subroutine glp_realloc(ptr,n,size) bind(C,name="glp_realloc")
                use iso_c_binding
                    type(c_ptr) :: ptr
                    integer(c_int), value :: n
                    integer(c_int), value :: size
            end subroutine
            subroutine glp_free(ptr) bind(C,name="glp_free")
                use iso_c_binding
                    type(c_ptr) :: ptr
            end subroutine
            subroutine glp_mem_limit(limit) bind(C,name="glp_mem_limit")
                use iso_c_binding
                    integer(c_int), value :: limit
            end subroutine
            function glp_create_graph(v_size,a_size) bind(C,name="glp_create_graph")
                use iso_c_binding
                    integer(c_int), value :: v_size
                    integer(c_int), value :: a_size
                    type(c_ptr) :: glp_create_graph
            end function
            subroutine glp_set_graph_name(G,name) bind(C,name="glp_set_graph_name")
                use iso_c_binding
                use glpk_types
                    type(c_ptr) :: G
                    character(c_char) :: name(*)
            end subroutine
            function glp_add_vertices(G,nadd) bind(C,name="glp_add_vertices")
                use iso_c_binding
                    type(c_ptr), value :: G
                    integer(c_int), value :: nadd
                    integer(c_int) :: glp_add_vertices
            end function
            subroutine glp_set_vertex_name(G,i,name) bind(C,name="glp_set_vertex_name")
                use iso_c_binding
                use glpk_types
                    type(c_ptr) :: G
                    integer(c_int), value :: i
                    character(c_char) :: name(*)
            end subroutine
            function glp_add_arc(G,i,j) bind(C,name="glp_add_arc")
                use iso_c_binding
                    type(c_ptr), value :: G
                    integer(c_int), value :: i
                    integer(c_int), value :: j
                    type(c_ptr) :: glp_add_arc
            end function
            subroutine glp_del_vertices(G,ndel,num) bind(C,name="glp_del_vertices")
                use iso_c_binding
                use glpk_types
                    type(c_ptr) :: G
                    integer(c_int), value :: ndel
                    integer(c_int) :: num(*)
            end subroutine
            subroutine glp_del_arc(G,a) bind(C,name="glp_del_arc")
                use iso_c_binding
                use glpk_types
                    type(c_ptr) :: G
                    type(c_ptr) :: a
            end subroutine
            subroutine glp_erase_graph(G,v_size,a_size) bind(C,name="glp_erase_graph")
                use iso_c_binding
                use glpk_types
                    type(c_ptr) :: G
                    integer(c_int), value :: v_size
                    integer(c_int), value :: a_size
            end subroutine
            subroutine glp_delete_graph(G) bind(C,name="glp_delete_graph")
                use iso_c_binding
                use glpk_types
                    type(c_ptr) :: G
            end subroutine
            subroutine glp_create_v_index(G) bind(C,name="glp_create_v_index")
                use iso_c_binding
                use glpk_types
                    type(c_ptr) :: G
            end subroutine
            function glp_find_vertex(G,name) bind(C,name="glp_find_vertex")
                use iso_c_binding
                    type(c_ptr), value :: G
                    character(c_char) :: name(*)
                    integer(c_int) :: glp_find_vertex
            end function
            subroutine glp_delete_v_index(G) bind(C,name="glp_delete_v_index")
                use iso_c_binding
                use glpk_types
                    type(c_ptr) :: G
            end subroutine
            function glp_read_graph(G,fname) bind(C,name="glp_read_graph")
                use iso_c_binding
                    type(c_ptr), value :: G
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_read_graph
            end function
            function glp_write_graph(G,fname) bind(C,name="glp_write_graph")
                use iso_c_binding
                    type(c_ptr), value :: G
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_write_graph
            end function
            function glp_check_asnprob(G,v_set) bind(C,name="glp_check_asnprob")
                use iso_c_binding
                    type(c_ptr), value :: G
                    integer(c_int), value :: v_set
                    integer(c_int) :: glp_check_asnprob
            end function
            function glp_asnprob_hall(G,v_set,a_x) bind(C,name="glp_asnprob_hall")
                use iso_c_binding
                    type(c_ptr), value :: G
                    integer(c_int), value :: v_set
                    integer(c_int), value :: a_x
                    integer(c_int) :: glp_asnprob_hall
            end function
            function glp_cpp(G,v_t,v_es,v_ls) bind(C,name="glp_cpp")
                use iso_c_binding
                    type(c_ptr), value :: G
                    integer(c_int), value :: v_t
                    integer(c_int), value :: v_es
                    integer(c_int), value :: v_ls
                    real(c_double) :: glp_cpp
            end function
            function glp_read_ccdata(G,v_wgt,fname) bind(C,name="glp_read_ccdata")
                use iso_c_binding
                    type(c_ptr), value :: G
                    integer(c_int), value :: v_wgt
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_read_ccdata
            end function
            function glp_write_ccdata(G,v_wgt,fname) bind(C,name="glp_write_ccdata")
                use iso_c_binding
                    type(c_ptr), value :: G
                    integer(c_int), value :: v_wgt
                    character(c_char) :: fname(*)
                    integer(c_int) :: glp_write_ccdata
            end function
            subroutine glp_netgen_prob(nprob,parm) bind(C,name="glp_netgen_prob")
                use iso_c_binding
                    integer(c_int), value :: nprob
                    integer(c_int) :: parm(*)
            end subroutine
            function glp_weak_comp(G,v_num) bind(C,name="glp_weak_comp")
                use iso_c_binding
                    type(c_ptr), value :: G
                    integer(c_int), value :: v_num
                    integer(c_int) :: glp_weak_comp
            end function
            function glp_strong_comp(G,v_num) bind(C,name="glp_strong_comp")
                use iso_c_binding
                    type(c_ptr), value :: G
                    integer(c_int), value :: v_num
                    integer(c_int) :: glp_strong_comp
            end function
            function glp_top_sort(G,v_num) bind(C,name="glp_top_sort")
                use iso_c_binding
                    type(c_ptr), value :: G
                    integer(c_int), value :: v_num
                    integer(c_int) :: glp_top_sort
            end function
            function glp_wclique_exact(G,v_wgt,sol,v_set) bind(C,name="glp_wclique_exact")
                use iso_c_binding
                    type(c_ptr), value :: G
                    integer(c_int), value :: v_wgt
                    real(c_double) :: sol(*)
                    integer(c_int), value :: v_set
                    integer(c_int) :: glp_wclique_exact
            end function
    end interface
end module glpk
